--- a/latex_thesis/appendix/ack.tex
+++ b/latex_thesis/appendix/ack.tex
@@ -1,2 +1,10 @@
 I wish to acknowledge the help received from some people and organizations during the developing of this project.\\
-First and foremost, i must thank my supervisor, Prof. Bruno Giacomazzo.
+First and foremost, i must thank my supervisor, prof. Bruno Giacomazzo, who introduced me to the fascinating world of numerical relativity through the Einstein Toolkit. \\
+I would also like to acknowledge the computational physics group at the University of Oslo, for providing me the access to the cluster "Smaug". 
+Without the compuational power of "Smaug", I would have not run the numerical simulations shown in this work.\\
+I would also like to thank Giovanni Pederiva, who constantly taught me many crucial numerical concepts.\\
+Finally, I must express my very profound gratitude to my family, my girlfriend and my friends for providing me with unfailing support and continuous encouragement.
+This accomplishment would not have been possible without them.\\
+Thank you.\\
+
+Lorenzo Speri
