--- a/latex_thesis/bibliography/bibthesis.bib
+++ b/latex_thesis/bibliography/bibthesis.bib
@@ -4,6 +4,25 @@
   url =          {http://www.lorene.obspm.fr/},
 }
 
+@article{zilhaoIntroductionEinsteinToolkit2013,
+  archivePrefix = {arXiv},
+  eprinttype = {arxiv},
+  eprint = {1305.5299},
+  title = {An {{Introduction}} to the {{Einstein Toolkit}}},
+  volume = {28},
+  issn = {0217-751X, 1793-656X},
+  doi = {10.1142/S0217751X13400149},
+  abstract = {We give an introduction to the Einstein Toolkit, a mature, open-source computational infrastructure for numerical relativity based on the Cactus Framework, for the target group of new users. This toolkit is composed of several different modules, is developed by researchers from different institutions throughout the world and is in active continuous development. Documentation for the toolkit and its several modules is often scattered across different locations, a difficulty new users may at times have to struggle with. Scientific papers exist describing the toolkit and its methods in detail, but they might be overwhelming at first. With these lecture notes we hope to provide an initial overview for new users. We cover how to obtain, compile and run the toolkit, and give an overview of some of the tools and modules provided with it.},
+  number = {22n23},
+  journal = {International Journal of Modern Physics A},
+  author = {Zilh{\~a}o, Miguel and L{\"o}ffler, Frank},
+  month = sep,
+  year = {2013},
+  keywords = {General Relativity and Quantum Cosmology,Physics - Computational Physics},
+  pages = {1340014},
+  file = {/Users/lorenzosperi/Zotero/storage/8HTS4U3P/Zilhão and Löffler - 2013 - An Introduction to the Einstein Toolkit.pdf;/Users/lorenzosperi/Zotero/storage/VG6UQQHL/1305.html}
+}
+
 @article{leclercGeodesicDeviationGravitational2006,
   archivePrefix = {arXiv},
   eprinttype = {arxiv},
