--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -1,7 +1,7 @@
 We want now to explain the important physical consequences of the theoretical results developed in the previous section.
 Throughout the next sections we will use the linearized theory of gravitatinal waves and we consider our metric to be in the TT gauge.
 %%in the second section we giva a coordinate-independent measure of the gravitational wave effects.
-\subsection{Free particles and detection principles}
+\subsection{Free Falling Particles and Detection Principles}
 \label{free_particles_detection_principles}
 In general relativity the trajectory of a free falling particle is described by the \textbf{geodesic equation}
 \begin{equation}
@@ -106,7 +106,7 @@ In Figure(\ref{gw_detetctor}), we show the sensitivity curve of the gravitationa
 %%
 
 
-\subsection{From the geodesic deviation equation to the $+$ and $\times$ polarizations}
+\subsection{From the Geodesic Deviation Equation to \\the $+$ and $\times$ Polarization Modes}
 Since free-falling bodies obey to the geodesic equation(\ref{geodesic_eq}), in this section we study the physical effects of the two polarizations plus $+$ and times $\times$ of the gravitational waves through relative motions of geodesics.\\
 The \textbf{geodesic deviation equation}  expresses the relative acceleration between two neighboring geodesics belonging to a one-parameter geodesics $\gamma_s (\tau)$:
 \begin{equation}
