--- a/latex_thesis/einstein_eq/einstein_eq_gw.tex
+++ b/latex_thesis/einstein_eq/einstein_eq_gw.tex
@@ -1,7 +1,7 @@
 Solving the Einstein's field equation is a mathematically complicated problem, because in general it is difficult to find solutions to the field equations which are non-linear    \cite{weinsteinEinsteinDiscoveryGravitational2016}.
 Therefore, we will obtain the gravitational wave solutions using the weak field linearized approximation and we will discuss the  gauge transformations that lead to the two radiative degrees of freedom of the Einsten's field equation.\\
 
-\subsection{Linearized Einstein's field equation}
+\subsection{Linearized Einstein's Field Equation}
 The Einstein's field equation is a tensor equation that represents how the geometry of spacetime is related to the presence of masses and energy:
 \begin{equation}
 \label{einstein_eq}
@@ -252,7 +252,7 @@ Substitution of the plane wave solution into equation(\ref{wave_equation}) impli
 Therefore, the plane wave solution is a gravitational wave which travels at the speed of light in the spatial direction $\vb{k} = (k^{1},k^{2},k^{3})/k^{0}$ and with frequency $\omega=k^{0} $, i.e. $\bar{h}_{\beta \nu} = A_{\beta \nu} \, \exp\qty[i\, (\vb{k} \cdot \vb{x} - \omega t)]$.
 Furthermore, any $\bar{h}_{\mu \nu}$ satisfying the linearized Einstein's field equation(\ref{wave_equation}) in vacuum describes a \textbf{gravitational wave} propagating at the speed of light, and it can be Fourier-expanded as a superposition of plane waves.\\
 
-\subsection{Gauge transformations and GW polarizations}
+\subsection{Gauge Transformations and Radiative Degrees of Freedom}
 A \textbf{gauge transformation} in linearized theory is defined as a transformation of the perturbation $h_{\mu \nu}$ into a new metric perturbation $h'_{\mu \nu}$, that satisfies
 \begin{equation}
 \label{gauge_transf}
