--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -23,7 +23,7 @@ And, finally, in the last section(\ref{numerical_evolution}), by using the open-
 The theoretical prediction from the quadrupole formula, that the frequency of the gravitational wave is twice the orbital angular frequncy of the binary, is confirmed in the simulations through a Fourier analysis of the gravitational signal.
 In addition, we propose a simple gravitational wave extraction method and we also analyze the rest mass density of the binary neutron stars in order to find the relation with the gravitational signal behavior.\\
 
-\textbf{NOTATION}\\
+\textbf{Notation}\\
 Throughout, we will use a spacelike signature $(-,+,+,+)$ and a system of geometrised units in which $G=c=1$, however depending on the need we will also indicate explicitely the speed of light $c=299\,792\,458 \,\metre \per \second$, and the Newton constant of gravitation $G=6.67408 \times 10^{-11} \, \newton \usk \metre^2 \usk \kilogram^{-2}$ \cite{codata_blog_codata_nodate}.\\
 We use the Einstein summation convention for  reapeted indeces.
 Greek letters are used for summing over all the indeces from 0 up to 3,
