--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -43,7 +43,7 @@ A really interesting and fascinating abstract
 \input{introduction/intro.tex}
 
 \clearpage
-\section{From the Einstein's field equation\\ to gravitational wave solutions}
+\section{From the Einstein's Field Equation\\ to Gravitational Wave solutions}
 \label{from_equation_to_solution}
 \input{einstein_eq/einstein_eq_gw.tex}
 
