--- a/latex_thesis/conclusion/conclusion.tex
+++ b/latex_thesis/conclusion/conclusion.tex
@@ -1,20 +1,24 @@
-We briefly summerize the main results, that we obtained in this paper and, then, we discuss the order of magnitude of the amplitude of the gravitational wave strains obtained in the numerical simulations.\\
 Using the weak field linearized equation, the Einstein's field equation in vacuum reduces to a tensorial form of the wave equation (\ref{wave_equation}).
 This gravitational wave equation tells us that the metric perturbation behaves as a wave and it travels at the speed of light.
 So, the metric perturbation is nothig but a propagating warpage of spacetime, that we call gravitational wave.\\
-The Riemann curvature tensor in the TT gauge is related to the gravitational wave through the relation (\ref{reimann_tensor_TT}): $:R^{\mu} _{00 \nu}: = \partial_0 \partial_0 h^{\mu}\! _{\nu}/2$, which elucidates the link between spacetime and a propagating warpage of spacetime. Ineed,
-the spacetime is more curved if the metric deformation velocity changes rapidly in time.\\
 Using the transverse traceless gaugue, we saw that the polarizations states of the gravitational radiation are only two: $h_{+}$ and $h_{\times}$.
-The two polarization modes are directly related to the way they strecth and squeeze spacetime and, therefore, they can change the proper distance between free falling particles according in the shape of $+$ or $\times$.
+The two polarization modes are directly related to the way they stretch and squeeze spacetime and, therefore, they can change the proper distance between free falling particles according in the shape of $+$ or $\times$.
 Such effect can be exploited to detect gravitational waves using interferometers.\\
-We analyzed the nature of gravitational wave  and we found out that it has quadrupolar nature and its amplitude scale as $1/r$.
+We analyzed the nature of gravitational wave  and we found out that it has quadrupolar nature and the GW amplitude scales as $1/r$.
 We derived the quadrupole formula stressing the importance of the approximations and we applied it to a slowly moving binary system.
-The main result of such example told us that the gravitational wave radiation has a frequency that is twice the orbital anular frequency.\\
-Subsequently we studied the simualtions of two compact binaries, and we saw that the orbital angular frequncy increases as the system emits gravitational waves.
-In fact, the radius of a binary system decreases because the two objects loose rotational energy through the emission of gravitational waves. However, as the radius decreases the orbital angular frequency increases unitl the two objects merge.
-For a binary black hole, the gravitational wave signal is damped after the merger, whereas for the binary neutron stars that we considered, the radiaition slowly decreases in amplitude. \\
-Neverthless we have studied systems with unreal configurations, we studied the link between the sources and the gravitational radiaiton.
-In addition we tested succesfully the codes provided by the Einstein Toolkit \cite{EinsteinToolkit:web}, and we also tested the quasi-equilibrium initial conditions of \cite{tichy_quasi-equilibrium_2004}.\\
-With detections of GWs \cite{abbott_gw170817:_2017,abbott_observation_2016}
-it has started a new era, in which the study of the Universe will be done from another point of view.
-By combining the computational power of numerical relativity with the new eyes given by the gravitational wave detector, we can understand thoroughly the connections between fascinating objects such black holes and neutron stars and the fundamental knowledge about gravity.
+The main result of such example told us that the gravitational wave radiation has a frequency that is twice the orbital angular frequency.\\
+Subsequently we studied the simualtions of two compact binaries, and through a Fourier analysis we confirmed that the angular frequency of the gravitational waves of BBH and BNS is twice the orbital angular frequency.\\
+The orbital angular frequency is almost constant for the first part of the inspiralling phase, and therefore, in this time range it is possible to recognize a sinusoidal behavior of the gravitational wave similiar to the quadrupole formula approximation.
+However, the binary system looses energy in the emission of gravitational waves and, therefore, the radius of the binary system decreases. 
+As the radius decreases, the orbital angular frequency increases, and therefore, the angular frequency of the gravitational wave does as well. 
+During the evolution the aplitude of the GW increases until it reaches the maximum value before the merger.
+Both BBH and BNS show similiar gravitational singnals during the inspiralling phase.\\
+For a binary black hole, the gravitational wave signal is damped after the merger, whereas for the considered binary neutron star, the radiation amplitude slowly decreases.
+Furthermore, the bouncing in the gravitational wave amplitude of the BNS denotes that the cores are bouncing off each other.\\
+In addition, we tested succesfully the codes provided by the Einstein Toolkit \cite{EinsteinToolkit:web}, and we also tested the quasi-equilibrium initial conditions of \cite{tichy_quasi-equilibrium_2004}.\\
+Further researches and more accurate simulations should be done in order to precisely explain the oscillations mode of the orbital angular frequency and of the gravitational strain of BBH-b6, BBH-b7, BBH-b10.\\
+By combining the computational power of numerical relativity with the new "eyes" given by the gravitational wave detector, we will be able to understand thoroughly the connections between fascinating objects such black holes and neutron stars and the gravitational waves.
+
+
+
+
